# dzmkii

./: .gitignore  .gitmodules  .ignore  CMakeLists.txt  run.sh  sketchbook.txt  terr_shader_bicubic_attempt  world_gen.h
include/: asset.h  camera.h  chunk.cpp  chunk.h  common.h  entity.h  factory.h  geometry.h  gui.h  input.h  light.h  logger.h  mesh.cpp  mesh.h  model.h  movement.h  renderer.h  scene.h  sun.h  systems.h  term_renderer.h  terrain.h  texture.h  tile.h  transform.h  typedefs.h  vertex.h  window.h  world.h
shaders/: LOS_shader.metal  basic_shader.metal  gui_shader.metal  gui_shader_textured.metal  terrain_shader.metal
src/: asset.cpp  camera.cpp  chunk.cpp  entity.h  factory.cpp  geometry.cpp  gui.cpp  logger.cpp  main.cpp  mesh.cpp  renderer.cpp  scene.cpp  sun.cpp  systems.cpp  term_renderer.cpp  terrain.cpp  texture.cpp  vertex.cpp
